[gd_scene load_steps=5 format=2]

[ext_resource path="res://ItemFactory/ItemFactory.gd" type="Script" id=1]
[ext_resource path="res://ItemFactory/ArtifactItem.gd" type="Script" id=2]
[ext_resource path="res://ItemFactory/BaseItem.gd" type="Script" id=3]
[ext_resource path="res://ItemFactory/ShipItem.gd" type="Script" id=4]

[node name="ItemFactory" type="Node"]
script = ExtResource( 1 )

[node name="ArtifactItem" type="Node" parent="."]
script = ExtResource( 2 )

[node name="BaseItem" type="Node" parent="."]
script = ExtResource( 3 )

[node name="ShipItem" type="Node" parent="."]
script = ExtResource( 4 )
